# randgen

./: .bumpversion.toml  .gitignore  BUILD.adoc  CHANGELOG.adoc  Cargo.toml  Cross.toml  README.md  build.rs  justfile
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CD.yaml  CI.yaml
assets/: .gitignore  demo.yaml
docs/man/man1/: randgen.1.adoc
src/: app.rs  cli.rs  main.rs  rng.rs
tests/: format.rs  generate.rs  integration.rs  rng.rs  seed.rs
tests/assets/: after-long-help.md  long-version.md
tests/utils/: command.rs  mod.rs
